@@ -80,7 +80,9 @@ Legend:
 
 ---
 
-@@ Revisit LEM for interconnected rules.
+@@ Inherited name lookup
+
+%% Revisit LEM for interconnected rules.
 
 @@ Maybe do something with diagnostic
 
